# dask-accelerated

./: .gitignore  .gitmodules  AWS_DEMO.md  CONTRIBUTING.md  README.md  helpers.py  main.py  optimization.py  setup.cfg  setup.py
.githooks/: pre-commit
.github/workflows/: build-and-test.yml  lint.yml  test.yml
benchmark/: README.md  benchmarks.py  helpers.py  main.py  pickler.py
dask-accelerated/: helpers.py  main.py  operators.py  optimization.py
dask_accelerated/: benchmarks.py  helpers.py  main.py  operators.py  optimization.py
dask_accelerated_worker/: accelerated_worker.py  benchmarks.py  helpers.py  main.py  start_worker.py  utils.py
native/: CMakeLists.txt
native/src/: Hexdump.hpp  NativeFilter.cpp
notebooks/: accelerated-worker.ipynb  plots-worker.ipynb  plots.ipynb  scheduler-plugin.ipynb  worker-plugin.ipynb  workers.ipynb
profiler/: main.py
test/: README.md  test_re2.py  test_tidre.py
tests/: test_re2.py  test_tidre.py
